UI: lista Students działa z API

--- a/src/UniversityApp.Ui.Admin/Pages/Account/Denied.cshtml
+++ b/src/UniversityApp.Ui.Admin/Pages/Account/Denied.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
 @model UniversityApp.Ui.Admin.Pages.Account.DeniedModel
 @{
+    ViewData["Title"] = "Access denied";
 }
+<h3>Access denied</h3>
